# picture_annotations

./: .env.example  .gitignore  LICENSE  README.md  SETUP_GUIDE.md  pyproject.toml  test_single.py
.copilot-tracking/changes/: 20251018-phase1-cli-implementation-changes.md  20251030-debug-mode-feature-changes.md  20251114-code-coverage-improvement-changes.md
.copilot-tracking/details/: 20251018-phase1-cli-implementation-details.md  20251030-debug-mode-feature-details.md  20251114-code-coverage-improvement-details.md  task-1.1.5-pdf-extractor-summary.md
.copilot-tracking/plans/: 20251018-phase1-cli-implementation-plan.instructions.md  20251030-debug-mode-feature-plan.instructions.md  20251114-code-coverage-improvement-plan.instructions.md
.copilot-tracking/prompts/: implement-code-coverage-improvement.prompt.md  implement-phase1-cli.prompt.md
.copilot-tracking/research/: 20251018-ada-annotator-implementation-research.md  20251018-pdf-alt-text-annotation-research.md  20251030-debug-mode-feature-research.md  20251114-code-coverage-improvement-plan.md
.copilot-tracking/session-summaries/: 20251114-test-fixing-session-summary.md
docs/: requirements.md  troubleshooting.md
docs/phase_summaries/: phase1.10_summary.md  phase1.11_summary.md  phase1.1_summary.md  phase1.2_summary.md  phase1.3_summary.md  phase1.4_summary.md  phase1.6_summary.md  phase1.7_summary.md  phase1.8_summary.md  phase1.9_summary.md
scripts/: setup.ps1
src/ada_annotator/: __init__.py  app.py  cli.py  config.py  exceptions.py
src/ada_annotator/ai_services/: __init__.py  semantic_kernel_service.py
src/ada_annotator/document_processors/: __init__.py  base_assembler.py  base_extractor.py  docx_assembler.py  docx_extractor.py  pdf_extractor.py  pptx_assembler.py  pptx_extractor.py
src/ada_annotator/generators/: __init__.py  alt_text_generator.py
src/ada_annotator/models/: __init__.py  alt_text_result.py  context_data.py  image_metadata.py  processing_result.py
src/ada_annotator/utils/: __init__.py  context_extractor.py  debug_document.py  error_handler.py  error_tracker.py  image_utils.py  json_handler.py  logging.py  report_generator.py  retry_handler.py
tests/: conftest.py
tests/fixtures/context/: sample_context.txt
tests/fixtures/documents/: README.md  corrupted.docx
tests/unit/: test_alt_text_generator.py  test_cli.py  test_cli_commands.py  test_cli_utilities.py  test_cli_validation.py  test_context_extractor.py  test_docx_assembler.py  test_docx_extractor.py  test_error_handler.py  test_error_tracker.py  test_image_utils.py  test_json_handler.py  test_logging.py  test_models.py  test_pdf_extractor.py  test_pptx_assembler.py  test_pptx_extractor.py  test_report_generator.py  test_retry_handler.py  test_semantic_kernel_service.py
